<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#F1F8E9"
    tools:context=".MainActivity">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_strikethrough_s_black_24dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titleView"
        android:layout_gravity="center_horizontal"
        android:textSize="20sp"
        android:textColor="#304FFE"
        android:fontFamily="sans-serif-condensed"
        />
    <EditText
        android:layout_marginTop="50dp"
        android:layout_gravity="center_horizontal"
        android:inputType="text"
        android:textAlignment="center"
        android:drawableLeft="@drawable/ic_shopping_cart_black_24dp"
        android:drawableStart="@drawable/ic_shopping_cart_black_24dp"
        android:drawablePadding="5dp"
        android:id="@+id/price_ID"
        android:hint="@string/price_text"
        android:textColorHint="#393D3D"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        />
    <EditText
        android:inputType="text"
        android:textAlignment="center"
        android:textColorHint="#FF393D3D"
        android:drawableLeft="@drawable/ic_content_cut_black_24dp"
        android:drawableStart="@drawable/ic_content_cut_black_24dp"
        android:drawablePadding="5dp"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal"
        android:id="@+id/percent_ID"
        android:hint="@string/percent_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        >
        <Button
            android:id="@+id/calculateID"
            android:layout_gravity="center_horizontal"
            android:background="#B1AEAE"
            android:fontFamily="monospace"
            android:textColor="#E91E63"
            android:layout_width="120dp"
            android:layout_height="45dp"
            android:drawableLeft="@drawable/ic_play_circle_outline_black_24dp"
            android:drawableStart="@drawable/ic_play_circle_outline_black_24dp"
            android:textStyle="bold"
            android:text="@string/calculateText"
            />
        <Button
            android:layout_marginLeft="10dp"
            android:id="@+id/clearID"
            android:layout_gravity="center_horizontal"
            android:background="#B1AEAE"
            android:fontFamily="monospace"
            android:textColor="#E91E63"
            android:layout_width="120dp"
            android:layout_height="45dp"
            android:drawableLeft="@drawable/ic_play_circle_outline_black_24dp"
            android:drawableStart="@drawable/ic_play_circle_outline_black_24dp"
            android:textStyle="bold"
            android:text="@string/clearText"
            />
    </LinearLayout>

    <TextView
        android:layout_marginTop="50dp"
        android:background="#212F79"
        android:layout_width="180dp"
        android:layout_height="30dp"
        android:text="@string/viewHeader"
        android:textColor="#fff"
        android:textAlignment="center"
        android:textSize="17sp"
        android:fontFamily="monospace"
        android:layout_gravity="center_horizontal"
        />
    <TextView
        android:id="@+id/DisplayID"
        android:drawableTop="@drawable/ic_monetization_on_black_24dp"
        android:gravity="center"
        android:textAlignment="gravity"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="#F44336"
        android:layout_width="180dp"
        android:layout_height="150dp"
        android:layout_gravity="center_horizontal"
        android:background="#E0F2F1"
        />

</LinearLayout>